--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.58.0",
 		"@typescript-eslint/parser": "^5.58.0",
 		"autoprefixer": "^10.4.14",
+		"cssnano": "^6.0.0",
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
